--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="main.css">
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
@@ -224,7 +224,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
     <script>
         // Blog-specific functionality
         document.addEventListener('DOMContentLoaded', function() {
