--- a/all-tools.html
+++ b/all-tools.html
@@ -202,7 +202,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
     <script src="scripts/all-tools.js"></script>
 </body>
 </html>
